--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background: linear-gradient(135deg,#1e88e5 0%, #6ab7ff 50%, #6dd3c9 100%);
+  background: #eef4f8;
   -webkit-font-smoothing:antialiased;
   -moz-osx-font-smoothing:grayscale;
   box-sizing: border-box;
